# directus-git-sync

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
directus_git_sync/: __init__.py  __main__.py  api.py  apply.py  cli.py  commands.py  data.py  export.py  seed.py  util.py  wipe.py
tests/: schema.yaml  test_pack_schema.py
